# fast-mem-cleaner

./: Cargo.toml  README.md
src/: main.rs  memory_cleaner.rs
